add funtion Checkout

--- a/ATBM-Final/src/main/resources/static/css/main.css
+++ b/ATBM-Final/src/main/resources/static/css/main.css
@@ -5791,5 +5791,8 @@ label {
     color: #ffba00; }
 
 /*# sourceMappingURL=main.css.map */
-
-
+.vietnamdong:before { content:'đ'; }
+ .abcxyz{
+  inline-size: 75px;
+   overflow-wrap: break-word;
+}
